--- a/.github/workflows/auto-build.yaml
+++ b/.github/workflows/auto-build.yaml
@@ -14,6 +14,9 @@ jobs:
           root_file: DictionaryOfNewspeak.tex
           texlive_version: 2022
           latexmk_use_xelatex: true
+          extra_fonts: |
+            ./fonts/*.ttf
+            ./fonts/*.ttc
       
       - uses: actions/upload-artifact@v4
         with:
